using Sirenix.OdinInspector;

public enum EntitySkillIndex
{
    [LabelText("技能0")]
    Skill_0 = 0,

    [LabelText("技能1")]
    Skill_1 = 1,

    [LabelText("技能2")]
    Skill_2 = 2,

    [LabelText("技能3")]
    Skill_3 = 3,

    [LabelText("技能4")]
    Skill_4 = 4,

    [LabelText("技能5")]
    Skill_5 = 5,

    [LabelText("技能6")]
    Skill_6 = 6,

    [LabelText("技能7")]
    Skill_7 = 7,

    [LabelText("技能8")]
    Skill_8 = 8,

    [LabelText("技能9")]
    Skill_9 = 9,

    [LabelText("技能10")]
    Skill_10 = 10,

    [LabelText("技能11")]
    Skill_11 = 11,

    [LabelText("技能12")]
    Skill_12 = 12,

    [LabelText("技能13")]
    Skill_13 = 13,

    [LabelText("技能14")]
    Skill_14 = 14,

    [LabelText("技能15")]
    Skill_15 = 15,
}